--- a/package.json
+++ b/package.json
@@ -14,7 +14,10 @@
     "react-dom": "^19.2.1",
     "uuid": "^13.0.0",
     "react": "^19.2.1",
-    "pdfjs-dist": "4.10.38"
+    "pdfjs-dist": "4.10.38",
+    "@vitejs/plugin-react": "^5.1.1",
+    "path": "^0.12.7",
+    "vite": "^7.2.6"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
