--- a/package.json
+++ b/package.json
@@ -9,15 +9,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@google/genai": "^1.30.0",
-    "lucide-react": "^0.555.0",
-    "react-dom": "^19.2.1",
-    "uuid": "^13.0.0",
     "react": "^19.2.1",
-    "pdfjs-dist": "4.10.38",
-    "@vitejs/plugin-react": "^5.1.1",
-    "path": "^0.12.7",
-    "vite": "^7.2.6"
+    "lucide-react": "^0.556.0",
+    "@google/genai": "^1.31.0",
+    "@vitejs/plugin-react": "^5.1.2",
+    "vite": "^7.2.7",
+    "react-dom": "^19.2.1",
+    "pdfjs-dist": "^5.4.449",
+    "path": "^0.12.7"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
